--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,14 @@
           document.getElementById("load").innerHTML =
             "Error loading the Firebase SDK, check the console."
         }
+
+        fetch("/api/a")
+          .then(res => {
+            return res.json()
+          })
+          .then(data => {
+            console.log(data)
+          })
       })
     </script>
   </body>
