--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
 
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
